# structured_generation

./: pyproject.toml  requirements.txt  structured_output.ipynb  structured_output.py
