[project]
name = "structured-generation"
version = "0.1.0"
description = "Structured Generation Workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "beautifulsoup4>=4.13.1",
    "datasets>=3.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "openai>=1.61.0",
    "outlines>=0.1.14",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.48.2",
]
